# IOT_Group2

./: .gitignore  MQTT_implement.text  mqtt_client_task_bak.c  todo.text
Project/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  deploy_ota.py  iot-policy.json  partitions_ota.csv  sdkconfig  sdkconfig.bak  sdkconfig.defaults
Project/certs/: device.pub
Project/include/: adc_dac.h  adc_dac_config.h  aws_iot_config.h  aws_mqtt_ota_task.h  core_http_config.h  core_mqtt_config.h  http_client_task.h  mqtt_client_task.h  network_service.h  wifi_ble_provision.h
Project/main/: CMakeLists.txt  main.c
Project/modules/: ADC_DAC.c  aws_mqtt_ota_task.c  http_client_task.c  mqtt_client_task.c  network_service.c  wifi_ble_provision.c
Project/windows_gui_app/: README.md  app.py
guide/: OTA.md  OTA_implement.txt  SECURE_BOOT_COMMANDS.txt  SECURE_BOOT_FLASH_GUIDE.md  SUMMARY.txt  secureboot.txt
